Fix wrong clipping caused by duplicate IDs from different SVGs

--- a/ui-client/src/styles/base.scss
+++ b/ui-client/src/styles/base.scss
@@ -8,7 +8,7 @@
   -ms-user-select: none;
   user-select: none;
 
-  svg {
+  .svgEditorImg {
     position: absolute;
     left: 0;
     top: 0;
